; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fast-export.c_show_progress.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fast-export.c_show_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@show_progress.counter = internal global i32 0, align 4
@progress = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"progress %d objects\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @show_progress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_progress() #0 {
  %1 = load i32, i32* @progress, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %13

4:                                                ; preds = %0
  %5 = load i32, i32* @show_progress.counter, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* @show_progress.counter, align 4
  %7 = load i32, i32* @progress, align 4
  %8 = srem i32 %6, %7
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %4
  %11 = load i32, i32* @show_progress.counter, align 4
  %12 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %11)
  br label %13

13:                                               ; preds = %3, %10, %4
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
